force-app/main/default/objects/Chain_of_Identity__c/Chain_of_Identity__c.object-meta.xml
<CustomObject>
    <label>Chain of Identity</label>
    <nameField>
        <displayFormat>COI-{00000}</displayFormat>
        <label>Chain of Identity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chain of Identity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>