force-app/main/default/objects/Chain_of_Identity__c/fields/COINumber__c.field-meta.xml
<CustomField>
    <fullName>COINumber__c</fullName>
    <label>COINumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>