force-app/main/default/objects/Chain_of_Identity__c/fields/Is_Protrac_COI__c.field-meta.xml
<CustomField>
    <fullName>Is_Protrac_COI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Protrac COI</label>
    <type>Checkbox</type>
</CustomField>