force-app/main/default/objects/Chain_of_Identity__c/fields/Patient_Journey__c.field-meta.xml
<CustomField>
    <fullName>Patient_Journey__c</fullName>
    <label>Patient Journey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>