force-app/main/default/objects/Chain_of_Identity__c/fields/Patient_Journey_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_Journey_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Journey ID</label>
    <referenceTo>Patient_Journey__c</referenceTo>
    <relationshipLabel>Chain of Identity</relationshipLabel>
    <relationshipName>Chain_of_Identity</relationshipName>
    <type>Lookup</type>
</CustomField>