force-app/main/default/objects/Chain_of_Identity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient_Journey_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>